data/derived/fa15/progs/unify/prog4035.ml.out
Characters 49-59:
  then (b, false)
       ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
